--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -594,6 +594,7 @@
 <script src="/resources/js/external-table.js" type="text/javascript"></script>
 <script src="/resources/js/external-modalFunction.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/newInquiry.js" type="text/javascript"></script>
+<script src="/resources/js/CRM/newFollowUp.js" type="text/javascript"></script>
 <script src="/resources/js/CRM/inquiries.js" type="text/javascript"></script>
 </body>
 </html>
