--- a/system/src/main/resources/templates/crm/Inquiries.html
+++ b/system/src/main/resources/templates/crm/Inquiries.html
@@ -375,7 +375,7 @@
                 <h3 class="text-white" style="text-transform: uppercase; font-size: medium; font-weight: bold; font-family: Arial, serif;">Add Follow Up</h3>
             </div>
             <div class="card-body bg-light rounded-0">
-                <form onsubmit="return false">
+                <form onsubmit="return false" id="frmNewFollowup">
                     <div class="row">
                         <div class="col-6">
                             <div class="mb-3">
@@ -391,6 +391,7 @@
                                         <option>Email</option>
                                         <option>Text</option>
                                     </select>
+                                    <div class="valid-feedback">Value Accepted</div>
                                 </div>
                                 <div class="text-muted small"><small>How did you follow up the inquiry?</small></div>
                             </div>
@@ -398,7 +399,9 @@
                                 <div class="form-label">
                                     <label class="fw-bold required small" for="inquiryFollowUpContent">Content</label>
                                 </div>
-                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{3,}$','newFollowUp','content')" required rows="4"></textarea>
+                                <textarea class="rounded-0 form-control" cols="80" id="inquiryFollowUpContent" onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{3,}$','newFollowUp','content')" required rows="4" style="font-size: 13px"></textarea>
+                                <div class="valid-feedback">Value Accepted</div>
+                                <div class="invalid-feedback">Please provide a valid Feedback</div>
                                 <div class="text-muted small"><small>Summary of the Customer Feedback.</small></div>
                             </div>
                         </div>
@@ -427,11 +430,11 @@
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpConfirmYes" name="inquiryFollowUpConfirm" onchange="newFollowUp.confirmed=this.value;" type="radio" value="Yes" />
-                                    <label class="form-check-label" for="inquiryFollowUpConfirmYes">Yes</label>
+                                    <label class="form-check-label small" for="inquiryFollowUpConfirmYes">Yes</label>
                                 </div>
                                 <div class="form-check form-check-inline">
                                     <input class="form-check-input" id="inquiryFollowUpConfirmNo" name="inquiryFollowUpConfirm" onchange="newFollowUp.confirmed=this.value;" type="radio" value="No" />
-                                    <label class="form-check-label" for="inquiryFollowUpConfirmNo">No</label>
+                                    <label class="form-check-label small" for="inquiryFollowUpConfirmNo">No</label>
                                 </div>
                             </div>
                             <div class="mb-2">
@@ -443,7 +446,9 @@
                                         id="inquiryFollowUpTime"
                                         onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newFollowUp','nextFollowup')"
                                         required
+                                        style="font-size: 13px"
                                 />
+                                <div class="valid-feedback">Value Accepted</div>
                                 <div class="text-muted small"><small>When do you want to contact this customer again?</small></div>
                             </div>
                         </div>
