--- a/system/src/main/resources/static/resources/css/customCRM.css
+++ b/system/src/main/resources/static/resources/css/customCRM.css
@@ -200,6 +200,35 @@ select:invalid[multiple] {
 .daterangepicker td.active, .daterangepicker td.active:hover {
     background-color: rebeccapurple;
 }
+/*dashboard widgets*/
+.pointer:hover{
+    cursor: pointer;
+}
+.dashboard-widget-blue:hover{
+    background: rgb(13,202,240);
+    color: white!important;
+    border-color: rgb(13,202,240)!important;
+    transition: all ease-in-out .5s;
+}
+.dashboard-widget-green:hover{
+    background: rgb(25,135,84);
+    color: white!important;
+    border-color: rgb(25,135,84)!important;
+    transition: all ease-in-out .5s;
+}
+.dashboard-widget-red:hover{
+    background: rgb(220,53,69);
+    color: white!important;
+    border-color: rgb(220,53,69)!important;
+    transition: all ease-in-out .5s;
+}
+.dashboard-widget-yellow:hover{
+    background: rgb(255,193,7);
+    color: white!important;
+    border-color: rgb(255,193,7)!important;
+    transition: all ease-in-out .5s;
+}
+
 
 /*inquirySheetInputs class*/
 .inquirySheetInputs{
