--- a/system/src/main/resources/templates/crm/Reports-All.html
+++ b/system/src/main/resources/templates/crm/Reports-All.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport">
-    <title>Reports-All | STEAM CRM</title>
+    <title>Reports-All | STEAM IMS</title>
     <!-- Favicon Icon -->
     <link href="/resources/images/icon-sq.png" rel="icon" type="image/png">
     <!-- Bootstrap CSS File-->
@@ -30,18 +30,14 @@
 <!-- Nav Bar Start -->
 <nav class="navbar navbar-expand-lg bg-purple p-1">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="Dashboard"><strong>CRM</strong> : : STEAM</a>
+        <a class="navbar-brand text-white" href="Dashboard"><strong>IMS</strong> : : STEAM</a>
         <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon" style="filter: invert(100%)"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <!-- Navbar left side (Default)-->
             <ul class="navbar-nav me-auto mb-lg-0">
-                <li class="nav-item">
-                    <a aria-controls="offcanvasRight" aria-current="page" class="nav-link text-white custom-width-max-content" data-bs-target="#offCanvasInquiry" data-bs-toggle="offcanvas"><i
-                            class="fa-solid fa-star"></i> New
-                        Inquiry</a>
-                </li>
+
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -120,149 +116,6 @@
     </div>
 </div>
 
-<!-- OffCanvas for New Inquiry Start -->
-<div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end" data-bs-backdrop="static"
-     id="offCanvasInquiry" tabindex="-1">
-    <div class="offcanvas-header bg-light">
-        <button aria-label="Close" id="offCanvasInquiryCloseButton" class="btn btn-sm btn-danger btn-close-red rounded-0" data-bs-dismiss="offcanvas"
-                type="button"><i class="fas fa-times"></i></button>
-        <h3 class="float-end"
-            style="text-transform: uppercase;font-size: medium;font-weight: bold;font-family: Arial, serif;">New
-            Inquiry</h3>
-    </div>
-    <div class="offcanvas-body">
-        <div class="card border-0">
-            <div class="card-body border-0">
-                <form id="frmNewInquiry" onsubmit="return false">
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquirySource">Source</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry"
-                                    data-placeholder="Please Select a Source" id="inquirySource"
-                                    onchange="selectDynamicValueValidator(this,'','newInquiry','sourceId')"
-                                    required>
-                                <option value=""></option>
-                                <option value="Cold Calling">Cold Calling</option>
-                                <option value="Facebook">Facebook</option>
-                                <option value="Leaflets">Leaflets</option>
-                                <option value="Letter Campaign">Letter Campaign</option>
-                                <option value="Personal Contact">Personal Contact</option>
-                                <option value="Phone">Phone Call</option>
-                                <option value="Seminar">Seminar</option>
-                                <option value="SMS Campaign">SMS Campaign</option>
-                                <option value="Walk-In">Walk-In</option>
-                                <option value="WhatsApp">WhatsApp</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryCourse">Course</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry"
-                                    data-placeholder="Please Select a Course" id="inquiryCourse"
-                                    onchange="selectDynamicValueValidator(this,'','newInquiry','courseId')"
-                                    required>
-                                <option value=""></option>
-                                <option>Diploma in IT</option>
-                                <option>Diploma in English</option>
-                                <option>Certificate in IT</option>
-                                <option>Certificate in English</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryFirstName">First Name</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryFirstName"
-                               onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,19}$','newInquiry','firstName')" required
-                               type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryLastName">Last Name</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryLastName"
-                               onkeyup="inputTextValidator(this,'^[A-Z][a-z]{2,29}$','newInquiry','lastName')" required
-                               type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold required" for="inquiryMobileNumber">Mobile Number</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryMobileNumber"
-                               onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','primaryMobileNumber')"
-                               required type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold" for="inquiryAdditionalMobileNumber">Additional Mobile Number</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryAdditionalMobileNumber"
-                               onkeyup="inputTextValidator(this,'^[0][7][01245678][0-9]{7}$','newInquiry','secondaryMobileNumber')"
-                               placeholder="Optional" type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label small">
-                            <label class="fw-bold" for="inquiryEmail">Email</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryEmail"
-                               onkeyup="inputTextValidator(this,'^[a-z|A-Z]{2,19}[@][a-z|A-Z]{2,8}[.][a-z|A-Z]{2,3}$','newInquiry','email')"
-                               placeholder="Optional"
-                               type="text">
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-semibold required small" for="inquiryIdOption">NIC / Postal ID</label>
-                        </div>
-                        <div class="input-group">
-                            <select class="form-select rounded-0 chosen-inquiry-ID" data-placeholder="Please Select"
-                                    id="inquiryIdOption"
-                                    onchange="selectStaticValueValidator(this,'','newInquiry','idType')"
-                                    required>
-                                <option value=""></option>
-                                <option value="NIC">NIC</option>
-                                <option value="POSTAL">Postal</option>
-                            </select>
-                            <input class="form-control rounded-0 newInquiryInputs" id="inquiryID"
-                                   onkeyup="inputTextValidator(this,'^(?:[6-9][0-9]{8}([V]|[X]|[v]|[x]){1})|(?:[19|20][0-9]{10})$','newInquiry','idValue')"
-                                   required>
-                        </div>
-                    </div>
-                    <div class="mb-2">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryTime">Convenient Time To Contact</label>
-                        </div>
-                        <input class="form-control rounded-0 newInquiryInputs" id="inquiryTime"
-                               onchange="inputDateTimeValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}[ ][0-9]{2}[:][0-9]{2}$','newInquiry','contactTime')"
-                               required>
-                    </div>
-                    <div class="mb-3">
-                        <div class="form-label">
-                            <label class="fw-bold required small" for="inquiryDescription">Description</label>
-                        </div>
-                        <textarea class="rounded-0 form-control newInquiryInputs" cols="80" id="inquiryDescription"
-                                  onkeyup="inputTextValidator(this,'^[a-zA-Z0-9\\s/]{20,}$','newInquiry','description')"
-                                  required
-                                  rows="4"></textarea>
-                        <div class="text-muted small"><small> a short description which will be useful for the
-                            counsellor who will be handling this inquiry</small></div>
-                    </div>
-                    <div class="mb-2">
-                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm"
-                                onclick="newInquirySubmit()" type="submit">Confirm
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- OffCanvas for New Inquiry End -->
 
 <!-- OffCanvas for Inquiry Sheet Start -->
 <div aria-labelledby="offcanvasRightLabel" class="offcanvas offcanvas-end w-50" data-bs-backdrop="static"
