--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -183,7 +183,7 @@
 <!-- inquiry pool start -->
 <div class="container-fluid pt-2">
     <div class="card-group gap-2">
-        <div class="card rounded-0 border-0 border-end">
+        <div class="card rounded-0 border-0 border-end" id="SchedulePool">
             <div class="card-header pb-0 p-2 bg-white border-0">
                 <h5 class="fs-4 fw-bold text-uppercase" style=" font-family: Arial, serif;">Scheduled Follow-Ups<span
                         class="text-danger float-end small text-capitalize">High Priority</span></h5>
@@ -212,7 +212,7 @@
                 </table>
             </div>
         </div>
-        <div class="card rounded-0 border-0">
+        <div class="card rounded-0 border-0" id="newPool">
             <div class="card-header pb-0 p-2 bg-white border-0">
                 <h5 class="fs-4 fw-bold text-uppercase" style=" font-family: Arial, serif;">Inquiry Pool<span
                         class="text-success float-end small text-capitalize">Low Priority</span></h5>
