favicon.ico added

--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -6,7 +6,7 @@
           name="viewport">
     <title>Dashboard | STEAM IMS</title>
     <!-- Favicon Icon -->
-    <link href="/resources/images/icon-sq.png" rel="icon" type="image/png">
+    <link href="/resources/images/favicon.ico" rel="icon" type="image/x-icon">
     <!-- Bootstrap CSS File-->
     <link href="/resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <!-- Jquery Js File -->
