--- a/system/src/main/resources/templates/index.html
+++ b/system/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                 <a class="text-decoration-none text-black" href="/STEAM-CRM">
                     <div class="card border-0" id="crmCard">
                         <div class="card-body pb-1">
-                            <h5 class="card-title text-uppercase fw-bold">Login to CRM</h5>
+                            <h5 class="card-title text-uppercase fw-bold">Login to IMS</h5>
                         </div>
                     </div>
                 </a>
