--- a/system/src/main/resources/static/resources/css/customCRM.css
+++ b/system/src/main/resources/static/resources/css/customCRM.css
@@ -204,30 +204,100 @@ select:invalid[multiple] {
 .pointer:hover{
     cursor: pointer;
 }
+.dashboard-widget-blue{
+    background: linear-gradient(white, white 50%, #0DCAF0FF 50%, #0DCAF0FF);
+    background-size: 100% 200%;
+    transition: background 1s;
+    outline:1px solid rgba(0, 0, 0, 0.175);
+    border: none;
+}
 .dashboard-widget-blue:hover{
-    background: rgb(13,202,240);
     color: white!important;
-    border-color: rgb(13,202,240)!important;
+    outline-color: rgb(13,202,240)!important;
     transition: all ease-in-out .5s;
+    background-position: 100% 100%;
+}
+.dashboard-widget-green{
+    background: linear-gradient(white, white 50%, #198754FF 50%, #198754FF);
+    background-size: 100% 200%;
+    transition: background 1s;
+    outline:1px solid rgba(0, 0, 0, 0.175);
+    border: none;
 }
 .dashboard-widget-green:hover{
-    background: rgb(25,135,84);
     color: white!important;
-    border-color: rgb(25,135,84)!important;
-    transition: all ease-in-out .5s;
+    outline-color: rgb(25,135,84)!important;
+    background-position: 100% 100%;
+    transition: all ease-in-out 0.5s;
+}
+.dashboard-widget-red{
+    background: linear-gradient(white, white 50%, #DC3545FF 50%, #DC3545FF);
+    background-size: 100% 200%;
+    transition: background 1s;
+    outline:1px solid rgba(0, 0, 0, 0.175);
+    border: none;
 }
 .dashboard-widget-red:hover{
-    background: rgb(220,53,69);
     color: white!important;
-    border-color: rgb(220,53,69)!important;
+    outline-color: rgb(220,53,69)!important;
     transition: all ease-in-out .5s;
+    background-position: 100% 100%;
+}
+.dashboard-widget-yellow{
+    background: linear-gradient(white, white 50%, #FFC107FF 50%, #FFC107FF);
+    background-size: 100% 200%;
+    transition: background 1s;
+    outline:1px solid rgba(0, 0, 0, 0.175);
+    border: none;
 }
 .dashboard-widget-yellow:hover{
-    background: rgb(255,193,7);
+    background-position: 100% 100%;
     color: white!important;
     border-color: rgb(255,193,7)!important;
     transition: all ease-in-out .5s;
 }
+.dashboard-widget-purple{
+    background: linear-gradient(white, white 50%, rebeccapurple 50%, rebeccapurple);
+    background-size: 100% 200%;
+    transition: background 1s;
+    outline:1px solid rgba(0, 0, 0, 0.175);
+    border: none;
+}
+.dashboard-widget-purple:hover{
+    color: white!important;
+    outline-color: rebeccapurple!important;
+    transition: all ease-in-out .5s;
+    background-position: 100% 100%;
+}
+.placeholder-image {
+    position: relative;
+    width: 150px;
+    height: 150px;
+}
+.placeholder-image::before, .placeholder-image::after {
+    content: "";
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    text-align: center;
+}
+.placeholder-image::before {
+    background: #ccc none repeat scroll 0 0;
+    /* box-shadow: inset 0 1px 10px #bbb; */
+    border-radius: 3px;
+    height: 200px;
+}
+.placeholder-image::after {
+    font-size: 49px;
+    opacity: 0.25;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-family: "FontAwesome";
+    content: "\f3e0";
+}
+
 
 
 /*inquirySheetInputs class*/
