--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -130,7 +130,7 @@
                         </div>
                         <div class="col-9 d-flex align-items-center justify-content-around">
                             <span class="lh-1 text-uppercase">Pending Inquiries</span>
-                            <span class="text-dark display-6 lh-1 fw-bold">1</span>
+                            <span class="text-dark display-6 lh-1 fw-bold" id="textNewInquiryCount">1</span>
 
                         </div>
                     </div>
