--- a/system/src/main/resources/templates/crm/Dashboard.html
+++ b/system/src/main/resources/templates/crm/Dashboard.html
@@ -108,7 +108,7 @@
                         </div>
                         <div class="col-9 d-flex align-items-center justify-content-around">
                             <span class="text-uppercase">Scheduled Inquiries</span>
-                            <span class="text-dark display-6 fw-bold">3</span>
+                            <span class="text-dark display-6 fw-bold" id="textScheduledInquiryCount">0</span>
 
                         </div>
 
@@ -148,7 +148,7 @@
                         </div>
                         <div class="col-9 d-flex align-items-center justify-content-around">
                             <span class="text-uppercase">Registered Inquiries</span>
-                            <span class="text-dark display-6 fw-bold">6</span>
+                            <span class="text-dark display-6 fw-bold" id="textRegisteredInquiryCount">0</span>
 
                         </div>
                     </div>
