changed crm to IMS

--- a/system/src/main/resources/templates/index.html
+++ b/system/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     <div class="w-50 p-5 mx-auto">
         <div class="row px-0 px-lg-5">
             <div class="col-lg-6 col-12 px-0 px-lg-5">
-                <a class="text-decoration-none text-black" href="/STEAM-CRM">
+                <a class="text-decoration-none text-black" href="/STEAM-IMS">
                     <div class="card border-0" id="crmCard">
                         <div class="card-body pb-1">
                             <h5 class="card-title text-uppercase fw-bold">Login to IMS</h5>
