changed crm to IMS

--- a/system/src/main/resources/templates/ims/index.html
+++ b/system/src/main/resources/templates/ims/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Test CRM</h1>
-<a href="/STEAM-CRM/Dashboard">go to dashboard</a>
+<a href="/STEAM-IMS/Dashboard">go to dashboard</a>
 </body>
 </html>
