--- a/system/src/main/resources/templates/ims/Dashboard.html
+++ b/system/src/main/resources/templates/ims/Dashboard.html
@@ -69,7 +69,7 @@
                 </li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Performance.html">Performance</a>
                 </li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administration.html">Administration</a>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administrations">Administration</a>
                 </li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false"
