--- a/system/src/main/resources/templates/ims/Reports-All.html
+++ b/system/src/main/resources/templates/ims/Reports-All.html
@@ -53,7 +53,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Performance.html">Performance</a></li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administration.html">Administration</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administrations">Administration</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Profile</button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
