--- a/system/src/main/resources/templates/ims/Administrations.html
+++ b/system/src/main/resources/templates/ims/Administrations.html
@@ -1,10 +1,241 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+    <title>Inquiries | STEAM IMS</title>
+    <!-- Favicon Icon -->
+    <link href="/resources/images/icon-sq.png" rel="icon" type="image/png" />
+    <!-- Bootstrap CSS File-->
+    <link href="/resources/bootstrap-5.2.3/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- Jquery Js File -->
+    <script src="/resources/jquery/jquery.min.js"></script>
+    <!-- Boostrap Js File -->
+    <script src="/resources/bootstrap-5.2.3/js/bootstrap.bundle.js"></script>
+    <!-- Fontawesome Js Plug-in -->
+    <script crossorigin="anonymous" src="https://kit.fontawesome.com/07941f149f.js"></script>
+    <!-- DateRangePicker Library -->
+    <script src="/resources/daterangepicker/moment.min.js" type="text/javascript"></script>
+    <script src="/resources/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+    <link href="/resources/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <!-- Chosen Library-->
+    <script src="/resources/chosen-1.8.7/chosen.jquery.min.js" type="text/javascript"></script>
+    <link href="/resources/chosen-1.8.7/chosen.min.css" rel="stylesheet" type="text/css" />
+    <!-- Custom CSS File-->
+    <link href="/resources/css/customCRM.css" rel="stylesheet" />
 </head>
 <body>
+<!-- Nav Bar Start -->
+<nav class="navbar navbar-expand-lg bg-purple p-1">
+    <div class="container-fluid">
+        <a class="navbar-brand text-white" href="Dashboard"><span class="text-uppercase fw-semibold">Inquiry Management System</span> : : STEAM</a>
+        <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon" style="filter: invert(100%);"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <!-- Navbar left side (Default)-->
+            <ul class="navbar-nav me-auto mb-lg-0">
+            </ul>
+            <!-- Navbar Right side -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiries">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules">Schedules</a></li>
+                <li class="nav-item dropdown-center custom-width-max-content p-0">
+                    <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
+                    <ul class="dropdown-menu dropdown-menu-end rounded-0">
+                        <li><a class="dropdown-item" href="Reports-All">All</a></li>
+                        <li><a class="dropdown-item" href="#">Registered</a></li>
+                        <li><a class="dropdown-item" href="#">Dropped</a></li>
+                        <li><a class="dropdown-item" href="#">Not Followed-Up</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Performance.html">Performance</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administrations">Administration</a></li>
+                <li class="nav-item dropdown-center custom-width-max-content p-0">
+                    <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Profile</button>
+                    <ul class="dropdown-menu dropdown-menu-end rounded-0">
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Nav Bar End -->
+<div class="container-fluid bg-custom-white custom-banner">
+    <h5>administrations</h5>
+</div>
 
+<div class="container-fluid pt-2">
+    <div class="card rounded-0">
+        <div class="card-body rounded-0">
+            <div class="row">
+                <div class="col-lg-12 col-12 d-flex justify-content-center align-items-center">
+                    <h5 class="fs-4 fw-bold text-uppercase text-center" style=" font-family: Arial, serif;">Welcome Back! 👋</h5>
+                </div>
+            </div>
+        </div>
+        <div class="card-footer pt-4 pb-4">
+            <div class="row mb-3">
+                <div class="col-lg-3 col-12">
+                    <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-red">
+                        <div class="row h-100">
+                            <div class="col-3 d-flex align-items-center justify-content-center">
+                                <div class="d-flex align-items-center justify-content-center"
+                                     style="border-radius: 50%;height: 60px;width: 60px;background: #f7dddd">
+                                    <i class="fa-solid fa-headset" style="color:#fd4c4c;font-size: 25px"
+                                       aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="col-9 d-flex align-items-center justify-content-around">
+                                <span class="lh-1 text-uppercase">Manage Sources</span>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-12">
+                    <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-green" >
+                        <div class="row h-100">
+                            <div class="col-3 d-flex align-items-center justify-content-center">
+                                <div class="d-flex align-items-center justify-content-center"
+                                     style="border-radius: 50%;height: 60px;width: 60px;background: #DDF6F7">
+                                    <i class="fa-solid fa-coins" style="color:#1ec781;font-size: 25px" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="col-9 d-flex align-items-center justify-content-around">
+                                <span class="text-uppercase">Manage Commission</span>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-12">
+                    <a href="employee.html" class="text-decoration-none">
+                        <div class="card card-body rounded-0 h-100 text-muted pointer dashboard-widget-purple">
+                            <div class="row h-100">
+                                <div class="col-3 d-flex align-items-center justify-content-center">
+                                    <div class="d-flex align-items-center justify-content-center"
+                                         style="border-radius: 50%;height: 60px;width: 60px;background: #edddf7">
+                                        <i class="fa-solid fa-user-tie" style="color:#831ec7;font-size: 25px"
+                                           aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                                <div class="col-9 d-flex align-items-center justify-content-around">
+                                    <span class="text-uppercase">Manage Employees</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-12">
+                    <a class="text-decoration-none" href="test">
+                        <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-blue">
+                            <div class="row h-100">
+                                <div class="col-3 d-flex align-items-center justify-content-center">
+                                    <div class="d-flex align-items-center justify-content-center"
+                                         style="border-radius: 50%;height: 60px;width: 60px;background: #c1eaff">
+                                        <i class="fa-solid fa-users" style="color:#1e7bc7;font-size: 25px"
+                                           aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                                <div class="col-9 lh-1 d-flex align-items-center justify-content-center">
+                                    <div class="lh-1">
+                                        <span class="text-uppercase">Manage Users</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <div class="col-lg-3 col-12">
+                    <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-red">
+                        <div class="row h-100">
+                            <div class="col-3 d-flex align-items-center justify-content-center">
+                                <div class="d-flex align-items-center justify-content-center"
+                                     style="border-radius: 50%;height: 60px;width: 60px;background: #f7dddd">
+                                    <i class="fa-solid fa-headset" style="color:#fd4c4c;font-size: 25px"
+                                       aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="col-9 d-flex align-items-center justify-content-around">
+                                <span class="lh-1 text-uppercase">Manage Sources</span>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-12">
+                    <a class="text-decoration-none" href="employee.html">
+                        <div class="card card-body rounded-0 h-100 text-muted pointer dashboard-widget-purple">
+                            <div class="row h-100">
+                                <div class="col-3 d-flex align-items-center justify-content-center">
+                                    <div class="d-flex align-items-center justify-content-center"
+                                         style="border-radius: 50%;height: 60px;width: 60px;background: #edddf7">
+                                        <i class="fa-solid fa-user-tie" style="color:#831ec7;font-size: 25px"
+                                           aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                                <div class="col-9 d-flex align-items-center justify-content-around">
+                                    <span class="text-uppercase">Manage Employees</span>
+
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-12">
+                    <a class="text-decoration-none" href="test">
+                        <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-blue">
+                            <div class="row h-100">
+                                <div class="col-3 d-flex align-items-center justify-content-center">
+                                    <div class="d-flex align-items-center justify-content-center"
+                                         style="border-radius: 50%;height: 60px;width: 60px;background: #c1eaff">
+                                        <i class="fa-solid fa-users" style="color:#1e7bc7;font-size: 25px"
+                                           aria-hidden="true"></i>
+                                    </div>
+                                </div>
+                                <div class="col-9 lh-1 d-flex align-items-center justify-content-center">
+                                    <div class="lh-1">
+                                        <span class="text-uppercase">Manage Users</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-3 col-12">
+                    <div class="card card-body rounded-0 h-100 pointer text-muted dashboard-widget-yellow" >
+                        <div class="row h-100">
+                            <div class="col-3 d-flex align-items-center justify-content-center">
+                                <div class="d-flex align-items-center justify-content-center"
+                                     style="border-radius: 50%;height: 60px;width: 60px;background: #fff7e5">
+                                    <i class="fa-solid fa-user-lock" style="color:#FDE74C;font-size: 25px" aria-hidden="true"></i>
+                                </div>
+                            </div>
+                            <div class="col-9 d-flex align-items-center justify-content-around">
+                                <span class="text-uppercase">Manage Privileges</span>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
