custom-active added

--- a/system/src/main/resources/templates/ims/Administrations.html
+++ b/system/src/main/resources/templates/ims/Administrations.html
@@ -38,7 +38,7 @@
             </ul>
             <!-- Navbar Right side -->
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Inquiries">Inquiries</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Inquiries">Inquiries</a></li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Schedules">Schedules</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Reports</button>
@@ -50,7 +50,7 @@
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Performance.html">Performance</a></li>
-                <li class="nav-item"><a class="nav-link text-white custom-width-max-content" href="Administrations">Administration</a></li>
+                <li class="nav-item"><a class="nav-link text-white custom-width-max-content custom-active" href="Administrations">Administration</a></li>
                 <li class="nav-item dropdown-center custom-width-max-content p-0">
                     <button aria-expanded="false" class="nav-link btn bg-steam-green text-white dropdown-toggle custom-width-max-content border-0" data-bs-toggle="dropdown">Profile</button>
                     <ul class="dropdown-menu dropdown-menu-end rounded-0">
