new mapping added

--- a/system/src/main/resources/templates/ims/Administrations.html
+++ b/system/src/main/resources/templates/ims/Administrations.html
@@ -116,7 +116,7 @@
                 </div>
 
                 <div class="col-lg-3 col-12">
-                    <a href="employee.html" class="text-decoration-none">
+                    <a href="Employee" class="text-decoration-none">
                         <div class="card card-body rounded-0 h-100 text-muted pointer dashboard-widget-purple">
                             <div class="row h-100">
                                 <div class="col-3 d-flex align-items-center justify-content-center">
