--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -28,7 +28,7 @@
 <!-- Nav Bar Start -->
 <nav class="navbar navbar-expand-lg bg-purple p-1">
     <div class="container-fluid">
-        <a class="navbar-brand text-white" href="Dashboard">Inquiry Management System</span> : : STEAM<</a>
+        <a class="navbar-brand text-white" href="Dashboard"><span class="text-uppercase fw-semibold">Inquiry Management System</span> : : STEAM</a>
         <button aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-bs-target="#navbarText" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon" style="filter: invert(100%)"></span>
