--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -81,7 +81,7 @@
                         <input class="form-control rounded-0" id="employeeSearchID"
                                placeholder="Employee ID, Mobile Number or NIC">
                         <div class="d-flex align-items-center justify-content-evenly">
-                            <button class="btn bg-purple rounded-0 text-white" id="" type="submit"><i
+                            <button class="btn bg-purple rounded-0 text-white"  type="submit"><i
                                     class="fa-solid fa-magnifying-glass small"></i></button>
                             <button class="btn btn-close-red rounded-0 text-white ms-3" id="btn-reset" type="reset"><i
                                     class="fa-solid fa-xmark"></i></button>
@@ -352,11 +352,11 @@
                 <td class="fw-bold w-25">Gender</td>
                 <td class="w-25">
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" id="" name="employeeGender" type="radio" value="Male" checked disabled >
+                        <input class="form-check-input" name="employeeGender" type="radio" value="Male" checked disabled >
                         <label class="form-check-label opacity-100" for="employeeGenderMale">Male</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" id="" name="employeeGender" type="radio" value="Female" disabled>
+                        <input class="form-check-input"  name="employeeGender" type="radio" value="Female" disabled>
                         <label class="form-check-label opacity-100" for="employeeGenderFemale">Female</label>
                     </div>
                 </td>
