--- a/system/src/main/resources/static/resources/css/customCRM.css
+++ b/system/src/main/resources/static/resources/css/customCRM.css
@@ -310,6 +310,9 @@ select:invalid[multiple] {
 .newInquiryInputs{
     font-size: 13px;
 }
+.newEmployeeInputs{
+    font-size: 13px;
+}
 /*overriding default*/
 .form-select:disabled {
     background-color: white;
