--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -195,7 +195,7 @@
                     </div>
                     <div class="mb-2">
                         <label for="employeeProfile" class="form-label fw-bold small required">Profile Photo</label>
-                        <input class="form-control rounded-0 small" type="file" id="employeeProfile" accept="image/png, image/jpeg" required>
+                        <input class="form-control rounded-0 small newEmployeeInputs" type="file" id="employeeProfile" accept="image/png, image/jpeg" required>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
