style="font-size: 13px" added

--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -229,12 +229,12 @@
                         <div class="form-check form-check-inline">
                             <input class="form-check-input newEmployeeInputs" id="employeeGenderMale" name="employeeGender" type="radio"
                                    value="Male">
-                            <label class="form-check-label" for="employeeGenderMale">Male</label>
+                            <label class="form-check-label" for="employeeGenderMale"  style="font-size: 13px">Male</label>
                         </div>
                         <div class="form-check form-check-inline">
                             <input class="form-check-input newEmployeeInputs" id="employeeGenderFemale" name="employeeGender" type="radio"
                                    value="Female">
-                            <label class="form-check-label" for="employeeGenderFemale">Female</label>
+                            <label class="form-check-label" for="employeeGenderFemale" style="font-size: 13px">Female</label>
                         </div>
                     </div>
                     <div class="mb-2">
