--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -265,11 +265,11 @@
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeCivilStatus">Civil Status</label>
                         </div>
-                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeCivilStatus" required>
-                            <option>Static Value 1</option>
-                            <option>Static Value 2</option>
-                            <option>Static Value 3</option>
-                            <option>Static Value 4</option>
+                        <select class="form-select rounded-0 newEmployeeInputs" id="employeeCivilStatus" required data-placeholder="Please Select a Civil Status">
+                            <option value=""></option>
+                            <option value="Single">Single</option>
+                            <option value="Married">Married</option>
+                            <option value="Divorced">Divorced</option>
                         </select>
                     </div>
                     <div class="mb-2">
