--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -303,8 +303,7 @@
                             counsellor who will be handling this inquiry</small></div>
                     </div>
                     <div class="mb-2">
-                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="inquiryConfirm" type="submit">Confirm
-                        </button>
+                        <button class="btn bg-purple text-white rounded-0 btn-block w-100" id="employeeConfirm" type="submit" onclick="newEmployeeSubmit()">Confirm</button>
                     </div>
                 </form>
             </div>
