--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -210,18 +210,24 @@
                             <label class="fw-bold required small" for="employeeCallingName">Calling Name</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeCallingName" required>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid calling name</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeNIC">NIC Number</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeNIC" required>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid NIC</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeDOB">Date of birth</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeDOB" required type="text">
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid Date of Birth</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -244,24 +250,32 @@
                             <label class="fw-bold required small" for="employeeEmail">Email Address</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeEmail" required type="email">
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid email</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeMobile">Mobile Number</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeMobile" required type="text">
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid Mobile Number</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold small" for="employeeLand">Land Number</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeLand" required type="text" placeholder="Optional">
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid Land Number</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
                             <label class="fw-bold small required" for="employeeAddress">Address</label>
                         </div>
                         <input class="form-control rounded-0 newEmployeeInputs" id="employeeAddress" required type="text">
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid address</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -273,6 +287,8 @@
                             <option value="Married">Married</option>
                             <option value="Divorced">Divorced</option>
                         </select>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid civil status</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -284,6 +300,8 @@
                             <option>Dynamic Value 3</option>
                             <option>Dynamic Value 4</option>
                         </select>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid designation</div>
                     </div>
                     <div class="mb-2">
                         <div class="form-label">
@@ -295,12 +313,16 @@
                             <option>Dynamic Value 3</option>
                             <option>Dynamic Value 4</option>
                         </select>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid employee status</div>
                     </div>
                     <div class="mb-3">
                         <div class="form-label">
                             <label class="fw-bold small" for="employeeNote">Note</label>
                         </div>
                         <textarea class="rounded-0 form-control newEmployeeInputs" cols="80" id="employeeNote" placeholder="Optional" rows="4"></textarea>
+                        <div class="valid-feedback">Value Accepted</div>
+                        <div class="invalid-feedback">Please provide a valid Note</div>
                         <div class="text-muted small"><small> a short description which will be useful for the
                             counsellor who will be handling this inquiry</small></div>
                     </div>
