--- a/system/src/main/resources/templates/ims/Employee.html
+++ b/system/src/main/resources/templates/ims/Employee.html
@@ -225,7 +225,7 @@
                         <div class="form-label">
                             <label class="fw-bold required small" for="employeeDOB">Date of birth</label>
                         </div>
-                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeDOB" required type="text">
+                        <input class="form-control rounded-0 newEmployeeInputs" id="employeeDOB" required type="text" onchange="inputTextValidator(this,'^20[0-9]{2}[-][0-9]{2}[-][0-9]{2}$','newEmployee','dob')">
                         <div class="valid-feedback">Value Accepted</div>
                         <div class="invalid-feedback">Please provide a valid Date of Birth</div>
                     </div>
